--- a/next-app/src/app/globals.css
+++ b/next-app/src/app/globals.css
@@ -1,3 +1,5 @@
+@import "leaflet/dist/leaflet.css";
+@import "leaflet.locatecontrol/dist/L.Control.Locate.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
